--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://iilou.github.io/dsa_visualizer",
+  "homepage": "https://iilou.github.io/",
   "name": "dsa_vis",
   "version": "0.1.0",
   "private": true,
